Corrects some font sizes and spacing.

--- a/css/style.css
+++ b/css/style.css
@@ -190,7 +190,7 @@
 		right: 0vw;
 		width: 40vw;
 		height: 60vh;
-		font-size: 14px;
+		font-size: 18px;
 		color: #eee;
 		font-weight: 300;
 		text-align: left;
